Added new methods to handle undo(Z) and redo(R) operations